--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     flex-direction: right;
     margin: 0 auto;
     width: 60%;
-    background-color: burlywood;
+    background-color: #61A7AA;
 }
 
 #poster{
@@ -15,6 +15,23 @@
 .textSide{    
     margin: 20px;
     margin-right: 40px;
+}
+
+body{
+    background-color: #AA7E61;
+}
+
+#stars > span {   
+        user-select: none;
+        cursor: pointer;            
+}
+
+.filledStar{
+    color: gold;
+}
+
+.emptyStar{
+    color: #AA7E61; ;
 }
 
 
