--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,21 @@
   margin: 10px;
 }
 .textSide {
-  margin: 20px;
+  margin: 10px;
   margin-right: 40px;
+  margin-top: 5px;
 }
 body {
   background-color: #303030;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 #stars > span {
   user-select: none;
   cursor: pointer;
+  font-size: 30px;
+}
+#stars > span:hover {
+  text-shadow: 1px 1px #000000;
 }
 .filledStar {
   color: gold;
