--- a/styles.less
+++ b/styles.less
@@ -16,17 +16,24 @@
 }
 
 .textSide{    
-    margin: 20px;
+    margin: 10px;
     margin-right: 40px;
+    margin-top: 5px;
 }
 
 body{
     background-color: @bgcolor;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 #stars > span {   
         user-select: none;
-        cursor: pointer;            
+        cursor: pointer;
+        font-size: 30px;            
+}
+
+#stars > span:hover { 
+    text-shadow: 1px 1px rgb(0, 0, 0);            
 }
 
 .filledStar{
