--- a/styles.less
+++ b/styles.less
@@ -32,6 +32,7 @@ body{
         cursor: pointer;
         font-size: 30px;            
 }
+//test
 
 #stars > span:hover { 
     text-shadow: 1px 1px rgb(20,20, 20);            
