--- a/styles.less
+++ b/styles.less
@@ -27,23 +27,19 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-#stars > span {   
-        user-select: none;
-        cursor: pointer;
-        font-size: 30px;            
+#stars > span {
+    color: @bgcolor;      
+    user-select: none;
+    cursor: pointer;
+    font-size: 30px;            
 }
-//test
 
 #stars > span:hover { 
     text-shadow: 1px 1px rgb(20,20, 20);            
 }
 
 .filledStar{
-    color: goldenrod;
-}
-
-.emptyStar{
-    color: @bgcolor; 
+    color: goldenrod !important;
 }
 
 [ng-cloak] {
